# sns_researcher

./: .env.example  .gitignore  pyproject.toml
knowledge/: followed_authors.json  index.md
knowledge/atoms/: 20260415-agent-manual-concise-instructions-over-long-docs.md  20260415-ai-agent-components-human-work-analogy-frame.md  20260415-ai-startup-b2b-industry.md  20260415-ai-시대-인재역량조직창업-관점.md  20260415-education-ai-behind-the-scenes-teacher-support-pri.md  20260415-education-ai-screen-time-device-regulation-design-.md  20260415-enterprise-ai-governance-execution-and-context-ownership.md  20260415-enterprise-ax-adoption-strategy.md  20260415-genai-agent-workflow-innovation-and-enterprise-ax.md  20260415-genai-enterprise-use-cases.md  20260415-multi-agent-ai-game-making-seed-funding-case.md  20260415-org-ai-capability-building.md  20260415-role-constraint-tool-specification-for-consistent-.md  20260415-skill-md-systemization-pattern-for-repetitive-rule.md  20260416-ai-narrative-vs-actual-utility-gap-investment-lens.md  20260416-ai-native-frontend-company-with-minimal-headcount.md  20260416-ai-platform-failure-from-misaligned-problem-defini.md  20260416-ai-scalability-through-deployment-optimization-inf.md  20260416-claude-enterprise-skills-connection-evaluation-dep.md  20260416-genai-startup-funding-practical-revenue-and-sovere.md  20260416-log-ssot-standardization-as-foundation-for-ai-usag.md  20260416-manual-baseline-test-for-ai-application-problem-va.md  (+12 more)
scripts/: migrate_topics.py
src/: config.py  main.py  session.py
src/agent/: crawler.py  fb_crawler.py  llm.py  (+6 more)
(+827 files in other folders)
